--- a/jadx-gui/build.gradle
+++ b/jadx-gui/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'edu.sc.seis.launch4j' version '2.4.5'
     id 'com.github.johnrengelman.shadow' version '5.0.0'
+    id 'org.beryx.runtime' version '1.6.0'
 }
 
 apply plugin: 'application'
@@ -71,6 +72,18 @@ launch4j {
     initialHeapPercent = 5
     maxHeapSize = 4096
     maxHeapPercent = 70
+}
+
+runtime {
+    modules = [
+            'java.desktop',
+            'java.naming',
+            'java.sql', // GSON register adapter for java.sql.Time (TODO)
+            'java.xml',
+    ]
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    imageZip = file("${rootProject.buildDir}/jadx-gui-with-jre.zip")
+    javaHome = 'C:\\Program Files\\AdoptOpenJDK\\jdk-11.0.4.11-hotspot'
 }
 
 test {
